<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/resultSecondaryDiameterWire"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultSecondaryNumbersOfTurns" />

    <EditText
        android:id="@+id/resultSecondaryNumbersOfTurns"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondaryWindingText" />

    <TextView
        android:id="@+id/secondaryWindingText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/secondaryWindingName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <TextView
        android:id="@+id/secondaryDiameterWiresText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/diameterWiresName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondaryRequaredNumbersOfTurnsText"
        tools:text="@string/diameterWiresName" />

    <TextView
        android:id="@+id/secondaryRequaredNumbersOfTurnsText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/requiredNumberOfTurnsName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondaryWindingText"
        tools:text="@string/requiredNumberOfTurnsName" />

    <View
        android:id="@+id/divider6"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryDiametersWireText" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requiredCoreAreaText" />

    <EditText
        android:id="@+id/resultAmpere3"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:focusable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/resultCoreArea2"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultAmpere" />

    <TextView
        android:id="@+id/primaryWindingText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/primaryWindingName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/primaryDiametersWireText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/diameterWiresName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryRequaredNumbersOfTurnsText"
        tools:text="@string/diameterWiresName" />

    <TextView
        android:id="@+id/primaryRequaredNumbersOfTurnsText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/requiredNumberOfTurnsName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryWindingText"
        tools:text="@string/requiredNumberOfTurnsName" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requiredCoreAreaText" />

    <TextView
        android:id="@+id/voltageText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="580dp"
        android:gravity="center_vertical"
        android:text="@string/voltageName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/voltageDevice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powerText"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/voltageName" />

    <TextView
        android:id="@+id/voltageWText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="580dp"
        android:gravity="center_vertical"
        android:text="@string/voltageWName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltageText"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/voltageWName" />

    <EditText
        android:id="@+id/voltageDevice"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        android:autofillHints="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powerDevice" />

    <TextView
        android:id="@+id/powerText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="580dp"
        android:autoText="false"
        android:gravity="center_vertical"
        android:text="@string/powerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/powerDevice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/powerName" />

    <EditText
        android:id="@+id/powerDevice"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="40"
        android:ems="10"
        android:inputType="number"
        android:shadowColor="#FFEB3B"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:entries="@array/VoltsArray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltageDevice" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="121dp"
        android:gravity="center"
        android:text="@string/resultName"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="@string/resultName" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:text="@string/calculateName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        tools:text="@string/calculateName" />

    <TextView
        android:id="@+id/resultAmpereText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/resultAmpereName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:text="@string/resultAmpereName" />

    <TextView
        android:id="@+id/requiredCoreAreaText"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/requiredCoreAreaName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultAmpereText"
        tools:text="@string/requiredCoreAreaName" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requiredCoreAreaText" />

    <EditText
        android:id="@+id/resultAmpere"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/resultCoreArea"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultAmpere" />

    <EditText
        android:id="@+id/resultPrimaryDiameterWire"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultPrimaryNumbersOfTurns" />

    <EditText
        android:id="@+id/resultPrimaryNumbersOfTurns"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryWindingText" />

</androidx.constraintlayout.widget.ConstraintLayout>