<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReactiveResistanceInductionActivity">

    <TextView
        android:id="@+id/powerText2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="580dp"
        android:autoText="false"
        android:gravity="center_vertical"
        android:text="@string/frequencyName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/powerDevice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/frequencyName" />

    <TextView
        android:id="@+id/powerText3"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:autoText="false"
        android:gravity="center_vertical"
        android:text="@string/inductionName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/powerDevice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powerText2"
        tools:text="@string/inductionName" />

    <EditText
        android:id="@+id/frequencyNumber"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inductionsNumber"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequencyNumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/calculateResistanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="139dp"
        android:text="@string/calculateName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="147dp"
        tools:text="@string/calculateName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="196dp" />
</androidx.constraintlayout.widget.ConstraintLayout>